--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/browser-support-banner.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/browser-support-banner.scss
@@ -2,18 +2,19 @@
 
 .browser-support-banner {
     position: fixed;
-    bottom: 3em;
-    left: 50%;
+    top: 1rem;
+    left: 1rem;
+    right: 1rem;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    justify-content: space-between;
     padding: 1em 2em;
-    transform: translate(-50%, 0);
-    max-width: 95vw;
     z-index: 999;
     background-color: $white;
-    border: 1px solid $charcoal;
+    border-left: 3px solid $blue;
     border-radius: .25em;
+    opacity: .9;
 
     p {
         margin: 0 1em 0 0;
