Replace dependency for bootstrap with hardcoded bootstrap-reboot

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
@@ -1,4 +1,4 @@
-﻿@import "../../node_modules/bootstrap/scss/bootstrap-reboot";
+﻿@import "map_modules/bootstrap-reboot";
 @import "map_modules/variables";
 @import "map_modules/form";
 
