--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/disclaimer.scss
@@ -1,5 +1,4 @@
-﻿@import "map_modules/bootstrap-reboot";
-@import "map_modules/variables";
+﻿@import "map_modules/variables";
 @import "map_modules/form";
 
 body {
