--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -329,7 +329,12 @@
         font-weight: 300;
         color: $dark-grey;
         opacity: 0;
-        pointer-events: none;
+
+        .information-icon-container .information-icon {
+          height: 1.25em;
+          width: 1.25em;
+          margin-left: .5em;
+        }
       }
 
       textarea.form-input + .form-input-label {
@@ -361,7 +366,12 @@
       font-size: .75rem;
       font-weight: 300;
       color: $dark-grey;
-      pointer-events: none;
+
+      .information-icon-container .information-icon {
+        height: 1.25em;
+        width: 1.25em;
+        margin-left: .5em;
+      }
     }
 
     input.form-input-multi-add {
